# DockerKubesDojo-lite

./: .gitignore  Pipfile  README.md  app.py  pyproject.toml  requirements.txt
k8s/: deployment.yaml  deployment_with_env_vars.yaml
k8s/app/: deployment.yaml  service.yaml
k8s/redis/: deployment.yaml  service.yaml
labs/: 01_docker_intro.md  02_docker_build.md  03_kubernetes_intro.md
lib/: __init__.py  health.py  liveness.py  parser.py
