[tool.poetry]
name = "dockerkubesdojo-lite"
version = "0.1.0"
description = ""
authors = ["Michael Frayer <frayerm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
